# prompt_studio

./: .gitignore  AGENTS.md  Claude.md  ISSUES.md  README.md  TESTING_WORKTREES.md  TEST_CHEATSHEET.md  TOOL_CALLING_SUMMARY.md  WORKTREE_TESTING_SUMMARY.md  compare-worktrees.sh  package-lock.json  test-worktree.sh  test_tool_calling.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  justfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f585ca700e4_extend_model_configs_with_openrouter_.py  5c084a14402e_drop_users_table.py  89340b64217a_initial_migration.py  9daa971895a9_cleanup_dead_tables_and_add_snapshots.py  e1173acf8985_add_model_id_to_provider_content.py  e3b0200f27ce_add_provider_content_table.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/middleware/: __init__.py  request_id.py
backend/app/routers/: __init__.py  chat.py  models.py  optimize.py  providers.py  saves.py
backend/app/routers/chat/: __init__.py  messages.py  parameters.py  providers.py  router.py  search.py  streaming.py  tools.py
backend/bruno-collection/: README.md  bruno.json
backend/bruno-collection/Chat/: Stream Chat.bru
backend/bruno-collection/Models/: Get All Models.bru  Get Model Info.bru  Refresh Model Catalog.bru
backend/bruno-collection/Optimize/: Optimize Prompt.bru
backend/bruno-collection/Saves/: Create Save.bru  Get Save by ID.bru  List Saves.bru
backend/config/: db.py  optimization_prompts.py
backend/models/: __init__.py  model_config.py  provider_content.py  snapshot.py  user.py
backend/scripts/: seed_provider_content.py
backend/services/: __init__.py  model_catalog.py  openrouter.py  tool_executor.py
backend/tests/: conftest.py  test_chat.py  test_chat_behavior.py  test_chat_v2.py  test_health.py  test_models.py
docs/: DEPLOYMENT.md  DESIGN_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  RESPONSE_FORMATTING_GUIDE.md  UI_STYLE_GUIDE.md  search_subscriptions.md
docs/api/: OPENROUTER_DOCUMENTATION.md
docs/best_practices/: ANTHROPIC_BEST_PRACTICES.md  ANTHROPIC_CLAUDE37SONNET_GUIDE.md  ANTHROPIC_CLAUDE_OPUS41_GUIDE.md  ANTHROPIC_CLAUDE_OPUS4_GUIDE.md  ANTHROPIC_CLAUDE_SONNET45_GUIDE.md  ANTHROPIC_CLAUDE_SONNET4_GUIDE.md  DEEPSEEK_BEST_PRACTICES.md  DEEPSEEK_CHAT_GUIDE.md  DEEPSEEK_R1_GUIDE.md  DEEPSEEK_V32EXP_GUIDE.md  GOOGLE_BEST_PRACTICES.md  GOOGLE_GEMINI25FLASH_GUIDE.md  GOOGLE_GEMINI25PRO_GUIDE.md  OPENAI_BEST_PRACTICES.md  OPENAI_GPT41_GUIDE.md  OPENAI_GPT4O_GUIDE.md  OPENAI_GPT5_GUIDE.md  PROMPT_ENGINEERING_BEST_PRACTICES.md  XAI_BEST_PRACTICES.md  XAI_GROK3_GUIDE.md  XAI_GROK4FAST_GUIDE.md  XAI_GROK4_GUIDE.md
docs/database/: POSTGRESQL_DOCUMENTATION.md
docs/development/: BACKEND_README.md  DEVELOPMENT.md  MVP_IMPLEMENTATION_PLAN.md  OPENROUTER_API_VERIFICATION.md  REFACTORING_PLAN.md  RUN_LOCAL.md  TECHNICAL_DEBT_ANALYSIS.md  TOOL_CALLING_IMPLEMENTATION.md  TOOL_CALLING_REFACTOR_PLAN.md  TOOL_CALLING_UNIFIED_PLAN.md
docs/frameworks/: FASTAPI_DOCUMENTATION.md  REACT_19_DOCUMENTATION.md  TAILWIND_CSS_V4_DOCUMENTATION.md
docs/prompting_guides/: ANTHROPIC_CLAUDE_OPUS41_GUIDE.md  ANTHROPIC_CLAUDE_OPUS4_GUIDE.md  ANTHROPIC_CLAUDE_SONNET45_GUIDE.md  DEEPSEEK_BEST_PRACTICES.md  DEEPSEEK_CHAT_GUIDE.md  DEEPSEEK_R1_GUIDE.md  DEEPSEEK_V32EXP_GUIDE.md  GOOGLE_GEMINI25FLASH_GUIDE.md  GOOGLE_GEMINI25PRO_GUIDE.md  OPENAI_GPT41_GUIDE.md  OPENAI_SORA2_GUIDE.md  XAI_GROK3_GUIDE.md  XAI_GROK4FAST_GUIDE.md  XAI_GROK4_GUIDE.md
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: BestPractices.tsx  BestPracticesModal.tsx  EdgeHandles.tsx  Header.tsx  HistoryPanel.tsx  LeftDrawer.tsx  Logo.tsx  ModelDetails.tsx  ParametersPanel.tsx  PromptEditor.tsx  PromptGuidanceModal.tsx  ReasoningBlock.tsx  ResponseFootnotes.tsx  ResponsePanel.tsx  RunInspectorDrawer.tsx  SearchResultsInline.tsx  SettingsContent.tsx  SettingsSheet.tsx  SidebarTabs.tsx  ToastContainer.tsx  ToolChips.tsx  ToolSelector.tsx  UserSettingsScreen.tsx
frontend/src/hooks/: useAutoGrow.ts  useChatStream.ts  useResizable.ts
frontend/src/services/: api.ts
frontend/src/store/: promptStore.ts  settingsStore.ts  themeStore.ts  toastStore.ts  uiStore.ts
frontend/src/types/: models.ts
frontend/src/utils/: format.ts  interpolate.ts  modelPresets.ts  theme.ts  tokenEstimator.ts
